<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.glodon.gvoice.MainActivity" >

    <ListView  
        android:id="@+id/msg_list_view"  
        android:layout_height="0dp"  
        android:layout_width="match_parent"  
        android:layout_weight="1"  
        android:divider="#0000"
        android:transcriptMode="normal"
        android:listSelector="#00000000"/>  
  
    <LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content">  
        <Button  
            android:id="@+id/voice"  
            android:layout_height="wrap_content"  
            android:layout_width="wrap_content"  
            android:text="@string/input_method_audio"/> 
        <FrameLayout 
            android:layout_height="wrap_content"  
            android:layout_width="0dp"  
            android:layout_weight="1">
            <EditText  
	            android:id="@+id/input_text"  
	            android:layout_height="wrap_content"  
	            android:layout_width="fill_parent"  
	            android:maxLines="2"/>  
            <Button 
                android:id="@+id/speak"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/touch_to_speak"/>
        </FrameLayout>       
        <Button  
            android:id="@+id/send"  
            android:layout_height="wrap_content"  
            android:layout_width="wrap_content"  
            android:text="@string/send_button"/>   
    </LinearLayout>  

</LinearLayout>
